fix(sandbox): overflow

--- a/packages/docs/client/components/Props/Renderer/GridVisualizer/index.styl
+++ b/packages/docs/client/components/Props/Renderer/GridVisualizer/index.styl
@@ -112,3 +112,6 @@ grid(direction, color, size)
       background-color $darkInvalid
       &.valid
         background-color $darkValidLine
+
+.content
+  overflow hidden
